<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_collapsing_toolbar"
            android:icon="@drawable/ic_collapsing_toolbar"
            android:title="@string/drawer_section_collapsing_toolbar" />
        <item
            android:id="@+id/nav_kiosk"
            android:icon="@drawable/ic_kiosk"
            android:title="@string/drawer_section_kiosk" />
    </group>

    <item android:title="@string/drawer_section_subsection_title">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/drawer_section_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/drawer_section_send" />
        </menu>
    </item>

</menu>
